pastey-test-suite/tests/ui/env-no-paren.stderr
error: expected `(`
 --> tests/ui/env-no-paren.rs:4:16
  |
4 |     fn [< env! >]() {}
  |                ^
